@@ -1,4 +1,4 @@
-assemblydir = $(libdir)/gtk-sharp-2.0
+assemblydir = $(prefix)/lib/gtk-sharp-2.0
 assembly_DATA = gconfsharp-schemagen.exe
 bin_SCRIPTS = gconfsharp2-schemagen
 CLEANFILES = gconfsharp-schemagen.exe
