@@ -1,4 +1,4 @@
-assemblydir = $(libdir)/gtk-sharp-2.0
+assemblydir = $(prefix)/lib/gtk-sharp-2.0
 assembly_DATA = gapi_codegen.exe
 bin_SCRIPTS = gapi2-codegen
 CLEANFILES = gapi_codegen.exe
