@@ -1,5 +1,7 @@
 2005-04-27  Ben Maurer  <bmaurer@ximian.com>
-
+	
+	* */Makefile.am: more build fixes
+	
 	* configure.in: amd64 build fix
 
 2005-04-26  Miguel de Icaza  <miguel@novell.com>
